[#9][feature/github-oauth-login] Github Oauth 로그인 구현 (#10)
* feat: queryDSL 및 jpa auditing configuration 설정 (#9)

* feat: submodule 설정 추가 (#9)

* feat: jwt token 생성 및 검증 로직 구현 (#9)

* feat: OAuthService 구현 및 테스트 (#9)

* feat: OAuth 로그인 API 구현 (#9)

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok:1.18.20'
@@ -55,4 +56,11 @@ sourceSets {
 
 test {
     useJUnitPlatform()
+}
+
+processResources.dependsOn('copySecurity')
+
+task copySecurity(type: Copy) {
+    from './submodule/security/application-security.yml'
+    into './src/main/resources'
 }
