--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -13,3 +13,4 @@ spring:
       hibernate:
         dialects: org.hibernate.dialect.MySQL57Dialect
         format_sql: true
+        default_batch_fetch_size: 1000
