--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodule"]
-	path = submodule
+[submodule "backend/submodule"]
+	path = backend/submodule
 	url = https://github.com/xlffm3/submodule.git
