--- a/backend/submodule/security/application-prod.yml
+++ b/backend/submodule/security/application-prod.yml
@@ -4,8 +4,10 @@ spring:
     url: jdbc:mariadb://192.168.1.208:3306/blog?serverTimezone=UTC&characterEncoding=UTF-8
     username: tester
     password: dkansk
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
   jpa:
-    show-sql: true
     generate-ddl: true
     hibernate:
       ddl-auto: validate
@@ -14,3 +16,7 @@ spring:
         dialects: org.hibernate.dialect.MySQL57Dialect
         format_sql: true
         default_batch_fetch_size: 1000
+      jdbc:
+        lob:
+          non_contextual_creation: true
+
