--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.flywaydb:flyway-core:6.4.2'
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation group: 'org.apache.tika', name: 'tika-core', version: '1.26'
