--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -4,6 +4,8 @@ spring:
     url: jdbc:h2:mem:~/test;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
+  flyway:
+    enabled: false
   jpa:
     show-sql: true
     generate-ddl: true
