--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    implementation 'org.flywaydb:flyway-core:6.4.2'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation group: 'org.apache.tika', name: 'tika-core', version: '1.26'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
@@ -60,8 +61,14 @@ test {
 }
 
 processResources.dependsOn('copySecurity')
+processResources.dependsOn('copyProd')
 
 task copySecurity(type: Copy) {
     from './submodule/security/application-security.yml'
+    into './src/main/resources'
+}
+
+task copyProd(type: Copy) {
+    from './submodule/security/application-prod.yml'
     into './src/main/resources'
 }
