chore: github callback url 변경 (#79)

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -97,12 +97,11 @@ bootJar {
         from "${asciidoctor.outputDir}"
         into 'BOOT-INF/classes/static/docs'
     }
+    finalizedBy 'copyDocument'
 }
 
-bootJarMainClassName.dependsOn('copyDocument')
-
 task copyDocument(type: Copy) {
-    dependsOn asciidoctor
+    dependsOn bootJar
     from file("build/docs/asciidoc")
     into file("src/main/resources/static/docs")
 }
