--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -20,3 +20,6 @@ spring:
       jdbc:
         lob:
           non_contextual_creation: true
+
+logging:
+  config: classpath:log4j2/log4j2-local.xml
