--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -16,3 +16,6 @@ spring:
         dialects: org.hibernate.dialect.MySQL57Dialect
         format_sql: true
         default_batch_fetch_size: 1000
+
+logging:
+  config: classpath:log4j2/log4j2-test.xml
