--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 spring:
   profiles:
     include: security
+  web:
+    resources:
+      cache:
+        cachecontrol:
+          cache-private: true
+          max-age: 3600
+server:
+  compression:
+    enabled: true
