[#82, #83][chore/log4j2] Log4j2 설정 및 캐싱 설정 추가 (#86)
* chore: log4j2 설정 (#83)

* chore: gzip 및 http 캐싱 설정 (#83)

* fix: withdraw url 수정 (#83)

* chore: README 문서 수정 (#83)

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
   profiles:
     include: security
-    active: test
+  web:
+    resources:
+      cache:
+        cachecontrol:
+          cache-private: true
+          max-age: 3600
+server:
+  compression:
+    enabled: true
